--- a/centos-6.7/Dockerfile
+++ b/centos-6.7/Dockerfile
@@ -1,4 +1,4 @@
-FROM centos/6.7
+FROM centos:6.7
 
 RUN curl -O /tmp/epel.rpm http://download.fedoraproject.org/pub/epel/6/x86_64/epel-release-6-8.noarch.rpm \
     && rpm -ivh /tmp/epel.rpm \
