Tweaking the COPY commands to not push everything into a single directory, but instead clone the directory

--- a/centos-6.7/Dockerfile
+++ b/centos-6.7/Dockerfile
@@ -5,8 +5,8 @@ RUN curl -o /tmp/epel.rpm https://www.mirrorservice.org/sites/dl.fedoraproject.o
     && rm -f /tmp/epel.rpm \
     && yum install -y ansible
 
-ONBUILD COPY ./example /ansible-role
-ONBUILD COPY ./* /ansible-role/
+ONBUILD COPY ./example /ansible-role/
+ONBUILD COPY ./ /ansible-role/
 
 ONBUILD WORKDIR /ansible-role
 ONBUILD ENTRYPOINT [ "ansible-playbook -i example/inventory example/example.yml" ]
